# srt-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml  codecov.yml  rust-toolchain
.cargo/: config.toml
.github/workflows/: publish_crates.yml  rust.yml
ci/: cargo-test.yml  codecov.sh  codecov.yml  install-rust.yml  openssl-win.yml
examples/: receiver.rs  sender.rs
proptest-regressions/packet/: data.txt
src/: SPEC.md  bin.rs  builder.rs  channel.rs  codec.rs  congest_ctrl.rs  congestion_control.rs  congestion_ctrl.rs  connected.rs  connection.rs  connection_settings.rs  crypto.rs  default_congest_ctrl.rs  default_congestion_control.rs  event.rs  fake.rs  handshake_responsibiliy.rs  lib.rs  loss_compression.rs  modular_num.rs  msg_number.rs  multiplex.rs  multiplexer.rs  packet.rs  pending_connection.rs  receiver.rs  recv_buffer.rs  recv_dgram_timeout.rs  recv_packet_timeout.rs  sender.rs  seq_number.rs  sink_send_wrapper.rs  socket.rs  socket_id.rs  srt_congest_ctrl.rs  srt_object.rs  srt_packet.rs  srt_version.rs  stats.rs  stats_printer.rs  (+3 more)
src/default_congestion_ctrl/: mod.rs  receiver.rs  sender.rs
src/multiplex/: streamer_server.rs
src/packet/: codec.rs  control.rs  data.rs  error.rs  (+1 more)
srt-c/: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml  srtrs.h
srt-c-unittests/: Cargo.toml  README.md  build.rs
srt-c/examples/: .gitignore  test-c-client.cpp  test-c-server.cpp
srt-c/src/: c_api.rs  catch.cpp  epoll.rs  errors.rs  lib.rs  socket.rs
srt-protocol/: Cargo.toml
srt-protocol/fuzz/: Cargo.toml
srt-protocol/fuzz/fuzz_targets/: connect.rs  packet_ipv4.rs  packet_ipv6.rs
srt-protocol/proptest-regressions/protocol/: mod.txt
srt-protocol/src/: accesscontrol.rs  connection.rs  crypto.rs  event.rs  lib.rs  modular_num.rs  msg_number.rs  packet.rs  pending_connection.rs  seq_number.rs  socket_id.rs  srt_version.rs  statistics.rs
srt-protocol/src/access/: mod.rs
srt-protocol/src/connection/: mod.rs  status.rs
srt-protocol/src/crypto/: wrap.rs
srt-protocol/src/listener/: input.rs  mod.rs  session.rs  statistics.rs
srt-protocol/src/options/: address.rs  bandwidth.rs  bind.rs  caller.rs  connect.rs  connection.rs  encryption.rs  error.rs  listener.rs  mod.rs  receiver.rs  rendezvous.rs  sender.rs  session.rs  socket.rs  srt_version.rs  stream_id.rs  units.rs  uri.rs  validation.rs
srt-protocol/src/packet/: control.rs  data.rs  error.rs  mod.rs  modular_num.rs  msg_number.rs  seq_number.rs  srt_version.rs  stream_id.rs  time.rs
srt-protocol/src/packet/control/: loss_compression.rs  mod.rs  srt.rs
srt-protocol/src/pending_connection/: connect.rs  hsv5.rs  listen.rs  rendezvous.rs
srt-protocol/src/protocol/: connection.rs  mod.rs  stats.rs  time.rs
srt-protocol/src/protocol/crypto/: mod.rs
srt-protocol/src/protocol/encryption/: key.rs  mod.rs  stream.rs  wrap.rs
srt-protocol/src/protocol/handshake/: mod.rs
srt-protocol/src/protocol/output/: mod.rs
srt-protocol/src/protocol/pending_connection/: connect.rs  cookie.rs  hsv5.rs  listen.rs  mod.rs  rendezvous.rs
srt-protocol/src/protocol/receiver/: arq.rs  buffer.rs  history.rs  mod.rs  time.rs
srt-protocol/src/protocol/sender/: buffer.rs  buffers.rs  congestion_control.rs  encapsulate.rs  encrypt.rs  mod.rs  output.rs
srt-protocol/src/protocol/stats/: mod.rs
srt-protocol/src/protocol/time/: base.rs  mod.rs  rtt.rs  timer.rs
srt-protocol/src/settings/: accesscontrol.rs  bandwidth.rs  connection.rs  crypto.rs  encryption.rs  mod.rs  socket.rs
srt-protocol/src/statistics/: mod.rs
srt-protocol/src/values/: mod.rs
srt-protocol/tests/: connect.rs  high_bandwidth_det.rs  lossy_deterministic.rs  not_enough_latency.rs  precise_ts0.rs  timestamp_rollover.rs
srt-protocol/tests/helpers/: connecter.rs  lossy_conn.rs  mod.rs  simulation.rs
srt-protocol/tests/lossy_conn/: mod.rs
srt-protocol/tests/simulator/: mod.rs
srt-tokio/: Cargo.toml
srt-tokio/examples/: accesscontrol.rs  accesscontrol_client.rs  accesscontrol_server.rs  connect_streamid.rs  ffmpeg_ac.rs  multiplex.rs  multiplex_authenticating_server.rs  multiplex_authorizing_server.rs  receiver.rs  sender.rs  srt2dash_ffmpeg.rs  ts_streamer.rs
srt-tokio/src/: builder.rs  channel.rs  codec.rs  lib.rs  multiplex.rs  net.rs  options.rs  pending_connection.rs  socket.rs  statistics.rs  watch.rs
srt-tokio/src/listener/: builder.rs  mod.rs  request.rs  session.rs  state.rs
srt-tokio/src/multiplex/: streamer_server.rs
srt-tokio/src/socket/: builder.rs  call.rs  factory.rs  listen.rs  mod.rs  rendezvous.rs  state.rs
srt-tokio/src/tokio/: mod.rs  socket.rs
srt-tokio/tests/: accesscontrol.rs  bidirectional.rs  crypto.rs  high_bandwidth.rs  invalid_packets.rs  keepalive.rs  latency_exchange.rs  lossy.rs  lossy_connect.rs  message_splitting.rs  multiplexer.rs  no_timeout.rs  not_enough_latency.rs  rendezvous.rs  simple.rs  single_packet_tsbpd.rs  stransmit_interop.rs  timeout.rs
srt-tokio/tests/lossy_conn/: mod.rs
srt-transmit/: Cargo.toml
srt-transmit/src/: helptext.txt  main.rs  streamer_server.rs
srt-transmit/tests/: stransmit_cmdline.rs  timeout.rs
srt-transmit/tests/ui/: bad_pbkeylen.stderr  bad_pbkeylen_str.stderr  local_port_srt_listen.stderr  local_port_udp_recv.stderr  multiplex_connect.stderr  multiplex_parameter.cmdline  multiplex_parameter.stderr  multiplex_recv.stderr  no_args.stderr  pbkeylen_no_pw.cmdline  pbkeylen_no_pw.stderr  rendezvous_no_host.stderr  udp_recv_as_second.cmdline  udp_recv_as_second.stderr  udp_send_as_first.stderr
tests/: bidirectional.rs  caller_listener.rs  crypto.rs  invalid_packets.rs  keepalive.rs  latency_exchange.rs  lossy.rs  lossy_connect.rs  lossy_deterministic.rs  message_splitting.rs  multiplexer.rs  no_timeout.rs  not_enough_latency.rs  rendezvous.rs  simple.rs  single_packet_tsbpd.rs  stransmit_cmdline.rs  stransmit_interop.rs  stransmit_rs.rs  tests.rs  timeout.rs  tsbpd.rs
tests_asdf/: crypto.rs  latency_exchange.rs  lossy.rs  multiplexer.rs  not_enough_latency.rs  rendezvous.rs  stransmit_interop.rs  stransmit_rs.rs
(+54 files in other folders)
