[package]
name = "secure-reliable-transport"
version = "0.2.1"
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/srt-rs"
homepage = "https://github.com/russelltg/srt-rs"
repository = "https://github.com/russelltg/srt-rs"
edition = "2018"
publish = false

[dependencies]
bitflags = "1"
clap = { version = "2", default-features = false, optional = true}
failure = { version = "0.1", default-features = false, features=["std"] }
futures = "0.3"
log = { version = "0.4", default-features = false }
rand = "0.7"
url = { version = "=2.1.0", optional = true } # https://github.com/servo/rust-url/issues/581
bytes = "0.5"
streaming-stats = "0.2.3"

[dependencies.env_logger]
version = "0.7"
default-features = false
features = ["humantime"]
optional = true

[dependencies.tokio]
version = "0.2"
features = ["udp", "time",  "fs", "stream", "test-util", "macros", "io-util", "dns", "io-std", "sync"]

[dependencies.tokio-util]
version = "0.2"
features = ["full"]

[dev-dependencies]
hex = "0.4"
rand_distr = "0.2"
env_logger = { version = "0.7", default-features = false }
proptest = "0.9.5"

[lib]
name = "srt"
path = "src/lib.rs"

[[bin]]
name = "stransmit-rs"
required-features = ["stransmit-rs"]
path = "src/bin/stransmit-rs.rs"

[features]
stransmit-rs = ["env_logger", "url", "clap"]
# vendored-openssl = ["openssl/vendored"]
default = ["stransmit-rs"]

[profile.release]
debug = true
