[workspace]
members = ["srt-protocol", "srt-tokio", "srt-transmit"]

# [dependencies]
# streaming-stats = "0.2.3"
# aes-ctr = "0.3"
# aes-soft = "0.4"
# block-cipher = "0.7"
# pbkdf2 = { version = "0.4", default-features = false }
# hmac = "0.8"
# sha-1 = "0.9"

# [dependencies.env_logger]
# version = "0.7"
# default-features = false
# features = ["humantime"]
# optional = true


# [dev-dependencies]
# futures-util = "0.3"
# env_logger = { version = "0.7", default-features = false }
# proptest = "0.10"

# [lib]
# name = "srt"
# path = "src/lib.rs"

# [[bin]]
# name = "stransmit-rs"
# required-features = ["stransmit-rs"]
# path = "src/bin/stransmit-rs.rs"

# [features]
# stransmit-rs = ["env_logger", "url", "clap", "anyhow"]
# default = ["stransmit-rs"]

# [profile.release]
# debug = true
