[package]
name = "srt-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
srt-tokio = {path = "../srt-tokio"}
lazy_static = "1"
libc = "0.2"
bytes = "1"
futures = "0.3"
log = "0.4"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "time"]
