[package]
name = "srt-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
srt-tokio = {path = "../srt-tokio"}
srt-protocol = {path = "../srt-protocol"}
lazy_static = "1"
libc = "0.2"
bytes = "1"
futures = "0.3"
log = "0.4"
thiserror = "1"
os_socketaddr = "0.2"
pretty_env_logger = "0.4"
bitflags = "1"
console-subscriber = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "time"]

[build-dependencies]
cc = "1.0"

[features]
default = ['console-subscriber']