[package]
name = "srt-c"
version = "0.4.0"
edition = "2021"
publish = true
description = "API compatabile libsrt reimplementation using srt-tokio"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
srt-tokio = {version = "0.4.0", path = "../srt-tokio"}
srt-protocol = {version = "0.4.0", path = "../srt-protocol"}
lazy_static = "1"
libc = "0.2"
bytes = "1"
futures = "0.3"
log = "0.4"
thiserror = "1"
os_socketaddr = "0.2.4"
pretty_env_logger = "0.4"
bitflags = "1"
console-subscriber = { version = "0.1", optional = true }

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "time"]

[build-dependencies]
cc = "1.0"

[features]
default = []