[package]
name = "srt-protocol"
version = "0.1.0"
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/srt-rs"
homepage = "https://github.com/russelltg/srt-rs"
repository = "https://github.com/russelltg/srt-rs"
edition = "2018"
publish = false

[dependencies]
log = { version = "0.4.14", default-features = false }
bytes = "1.1.0"
streaming-stats = "0.2.3"
rand = "0.8.4"
aes = { version = "0.7.5", features = ["ctr"] }
cipher = "0.3.0"
pbkdf2 = { version = "0.9.0", default-features = false }
hmac = "0.11.0"
sha-1 = "0.9.8"
bitflags = "1.3.2"
arraydeque = "0.4.5"
array-init = "2.0.0"
take-until = "0.1.0"
hex = "0.4.3"
thiserror = "1.0.30"

[dev-dependencies]
proptest = "1.0.0"
rand_distr = "0.4.2"
pretty_env_logger = { version = "0.4.0", default-features = false }

[features]
default = []
log_disable = ["log/max_level_off"]
