[package]
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
documentation = "https://docs.rs/srt-rs"
edition = "2018"
homepage = "https://github.com/russelltg/srt-rs"
license = "Apache-2.0"
name = "srt-protocol"
publish = false
repository = "https://github.com/russelltg/srt-rs"
version = "0.1.0"
[dependencies]
array-init = "2.0.0"
arraydeque = "0.4.5"
bitflags = "1.3.2"
bytes = "1.1.0"
cipher = "0.3.0"
derive_more = "*"
hex = "0.4.3"
hmac = "0.11.0"
rand = "0.8.4"
sha-1 = "0.9.8"
streaming-stats = "0.2.3"
take-until = "0.1.0"
thiserror = "1.0.30"

[dependencies.aes]
features = ["ctr"]
version = "0.7.5"

[dependencies.log]
default-features = false
version = "0.4.14"

[dependencies.pbkdf2]
default-features = false
version = "0.9.0"

[dev-dependencies]
proptest = "1.0.0"
rand_distr = "0.4.2"

[dev-dependencies.pretty_env_logger]
default-features = false
version = "0.4.0"

[features]
default = []
log_disable = ["log/max_level_off"]
