[package]
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
documentation = "https://docs.rs/srt-rs"
edition = "2021"
homepage = "https://github.com/russelltg/srt-rs"
license = "Apache-2.0"
name = "srt-protocol"
publish = true
repository = "https://github.com/russelltg/srt-rs"
version = "0.4.2"

[dependencies]
array-init = "2.0.0"
arraydeque = "0.5.1"
bitflags = "2.0.2"
bytes = "1.1.0"
cipher = "0.4.0"
derive_more = "0.99.17"
hex = "0.4.3"
hmac = "0.12.0"
keyed_priority_queue = "0.4.1"
rand = "0.8.4"
regex = "1.7.0"
sha-1 = "0.10.0"
streaming-stats = "0.2.3"
take-until = "0.2.0"
thiserror = "1.0.30"
url = "2.3.1" # https://github.com/servo/rust-url/issues/581
aes = "0.8"
ctr = "0.9"

[dependencies.log]
default-features = false
version = "0.4.14"

[dependencies.pbkdf2]
default-features = false
version = "0.12.1"

[dev-dependencies]
assert_matches = "1.0.0"
proptest = "1.0.0"
rand_distr = "0.4.2"
pretty_assertions = "1.3.0"

[dev-dependencies.pretty_env_logger]
default-features = false
version = "0.5.0"

[features]
default = []
log_disable = ["log/max_level_off"]
