[package]
name = "srt-tokio"
version = "0.1.0"
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/srt-rs"
homepage = "https://github.com/russelltg/srt-rs"
repository = "https://github.com/russelltg/srt-rs"
edition = "2018"
publish = false

[dependencies]
srt-protocol = { path = "../srt-protocol" }
log = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
bytes = "1"
rand = "0.8"
tokio-stream = "0.1"
ac-ffmpeg = { version = "0.17", optional = true }

[dependencies.tokio]
version = "1"
features = ["net", "time", "test-util", "macros", "io-util", "io-std", "sync"]

[dev-dependencies]
anyhow = "1"
pretty_env_logger = { version = "0.4", default-features = false }
rand = "0.8"
rand_distr = "0.4"
tokio-util = { version = "0.6", features = ["net", "codec"] }
libloading = "0.7"
libc = "0.2"

[dev-dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]


[features]
default = []
log_disable = ["log/max_level_off"]
