[package]
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
documentation = "https://docs.rs/srt-rs"
edition = "2018"
homepage = "https://github.com/russelltg/srt-rs"
license = "Apache-2.0"
name = "srt-tokio"
publish = false
repository = "https://github.com/russelltg/srt-rs"
version = "0.1.0"

[dependencies]
bytes = "1"
rand = "0.8"
socket2 = "0.4"

[dependencies.ac-ffmpeg]
optional = true
version = "0.17"

[dependencies.futures]
default-features = false
features = ["std", "async-await"]
version = "0.3"

[dependencies.log]
default-features = false
version = "0.4"

[dependencies.srt-protocol]
path = "../srt-protocol"

[dependencies.tokio]
features = ["net", "time", "test-util", "macros", "io-util", "io-std", "sync"]
version = "1"

[dependencies.tokio-stream]
features = ["sync"]
version = "0.1.8"


[dev-dependencies]
anyhow = "1"
lazy_static = "1"
libc = "0.2"
libloading = "0.7"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies.pretty_env_logger]
default-features = false
version = "0.4"

[dev-dependencies.tokio]
features = ["rt-multi-thread"]
version = "1"

[dev-dependencies.tokio-util]
features = ["net", "codec"]
version = "0.6"

[features]
default = []
log_disable = ["log/max_level_off"]
