[package]
name = "srt-transmit"
version = "0.1.0"
authors = ["Russell Greene <russellgreene8@gmail.com>"]
description = "SRT implementation in Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/srt-rs"
homepage = "https://github.com/russelltg/srt-rs"
repository = "https://github.com/russelltg/srt-rs"
edition = "2018"
publish = false

[dependencies]
bus = "2"
srt-tokio = { path = "../srt-tokio"}
clap = { version = "2", default-features = false}
log = { version = "0.4", default-features = false }
url = "=2.1.0" # https://github.com/servo/rust-url/issues/581
bytes = "1.0"
anyhow = "1"
pretty_env_logger = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dependencies.tokio]
version = "1"
features = ["net", "time",  "fs", "test-util", "macros", "io-util", "io-std", "sync", "rt-multi-thread", "process"]

[dependencies.tokio-util]
version = "0.6"
features = ["full"]


[dev-dependencies]
rand = "0.8"
tokio-stream = "0.1"

[features]
default = []
log_disable = ["log/max_level_off"]
